--- a/todo
+++ b/todo
@@ -1,4 +1,4 @@
-- [ ] menu
-- [ ] book clas
+- [ ] menu [50%]
+- [ ] book class [10%]
 - [ ] read text file (json)
 - [ ] construct dummy data using json then load into array
